--- a/package.json
+++ b/package.json
@@ -28,7 +28,11 @@
     "client-http": "0.0.7"
   },
   "devDependencies": {
+    "coffee-script": "^1.9.3",
+    "coffeelint": "^1.9.7",
     "grunt-cli": "^0.1.13",
+    "grunt-coffeelint": "0.0.13",
+    "grunt-contrib-coffee": "^0.13.0",
     "grunt-contrib-jshint": "^0.11.0",
     "grunt-contrib-nodeunit": "^0.4.1",
     "grunt-contrib-watch": "^0.6.1",
